# teor_aut_lab2

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
src/: interface.h  main.cpp  struct_synthesis.cpp  table.cpp  table_item.cpp
